removed console logging

--- a/src/certSelector.html
+++ b/src/certSelector.html
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
             border-color: #5bd0c0;
-            border-style:solid
+            border-style:solid;
         }
         .certlistitem:hover {
             cursor: pointer;
