--- a/src/about.html
+++ b/src/about.html
@@ -3,23 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>About NITES-Next</title>
+  <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
 </head>
 <body>
-
     <div id="about" class="container" style="display: none;">
         <h1 id="productName"></h1>
         <p>
-        Build <span id="productVersion"></span>
-            (<span id="env"></span>) - <span id="os"></span>
+        Version <span id="productVersion"></span>
         </p>
         <p>
-        &copy;<span id="copyright"></span>
-        </p>
-        <p>
-        Support: <span id="homepage"></span>
+        Support: <a id="homepage" href="javascript:void(0);"></a>
         </p>
     </div>
-
     <script src="about.js"></script>
 </body>
 </html>
